--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   build-and-test:
     # Use macOS 14 (Apple Silicon) for better performance
-    runs-on: macos-14
+    runs-on: macos-latest
 
     # Matrix strategy to test multiple platforms
     strategy:
@@ -32,8 +32,8 @@ jobs:
         uses: actions/checkout@v4
 
       # Select Xcode version (e.g., 16.0)
-      - name: Select Xcode
-        run: sudo xcode-select -switch /Applications/Xcode_16.0.app
+      # - name: Select Xcode
+      #   run: sudo xcode-select -switch /Applications/Xcode_16.0.app
 
       # Log Xcode version for debugging
       - name: Log Xcode Version
