--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,11 +31,11 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      # Select Xcode version (e.g., 16.3)
+      # Select Xcode version (16.2)
       - name: Select Xcode version
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '16.3'
+          xcode-version: '16.2'
 
       # Log Xcode version for debugging
       - name: Log Xcode Version
