--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,12 +19,12 @@ jobs:
           - name: macOS
             destination: 'platform=macOS'
             scheme: 'WojoNES' # Replace with your macOS scheme name
-          - name: iOS
-            destination: 'platform=iOS Simulator,OS=latest,name=iPhone 16' # Covers iPhone
-            scheme: 'WojoNES' # Replace with your iOS scheme name
-          - name: iPad
-            destination: 'platform=iOS Simulator,OS=latest,name=iPad (10th generation)' # Covers iPad
-            scheme: 'WojoNES' # Same iOS scheme, different destination
+#          - name: iOS
+#            destination: 'platform=iOS Simulator,OS=latest,name=iPhone 16' # Covers iPhone
+#            scheme: 'WojoNES' # Replace with your iOS scheme name
+#          - name: iPad
+#            destination: 'platform=iOS Simulator,OS=latest,name=iPad (10th generation)' # Covers iPad
+#            scheme: 'WojoNES' # Same iOS scheme, different destination
 
     steps:
       # Check out the repository code
