--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   build-and-test:
     # Use macOS 14 (Apple Silicon) for better performance
-    runs-on: macos-14
+    runs-on: macos-latest
 
     # Matrix strategy to test multiple platforms
     strategy:
@@ -19,21 +19,23 @@ jobs:
           - name: macOS
             destination: 'platform=macOS'
             scheme: 'WojoNES' # Replace with your macOS scheme name
-          - name: iOS
-            destination: 'platform=iOS Simulator,OS=latest,name=iPhone 15' # Covers iPhone
-            scheme: 'WojoNES' # Replace with your iOS scheme name
-          - name: iPad
-            destination: 'platform=iOS Simulator,OS=latest,name=iPad (10th generation)' # Covers iPad
-            scheme: 'WojoNES' # Same iOS scheme, different destination
+#          - name: iOS
+#            destination: 'platform=iOS Simulator,OS=latest,name=iPhone 16' # Covers iPhone
+#            scheme: 'WojoNES' # Replace with your iOS scheme name
+#          - name: iPad
+#            destination: 'platform=iOS Simulator,OS=latest,name=iPad (10th generation)' # Covers iPad
+#            scheme: 'WojoNES' # Same iOS scheme, different destination
 
     steps:
       # Check out the repository code
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      # Select Xcode version (e.g., 16.0)
-      - name: Select Xcode
-        run: sudo xcode-select -switch /Applications/Xcode_16.0.app
+      # Select Xcode version (16.2)
+      - name: Select Xcode version
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: '16.2'
 
       # Log Xcode version for debugging
       - name: Log Xcode Version
